--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -118,6 +118,12 @@ Triggers available:\\
 
 \end{docCommand}
 
+\begin{docCommand}[]{setExercisesDir}{\marg{directory}}
+ This is the directory, relative to the file you included the package,
+ where the package should be looking for exercises. Default is \texttt{exercises}
+
+\end{docCommand}
+
 
 
  This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
