--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,2 +1,21 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
+%% The LaTeX package exbank - version 0.01 (2018/03/30)
+%% exbank.sty: Exercise bank
+%%
+%% -------------------------------------------------------------------------------------------
+%% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
+%% -------------------------------------------------------------------------------------------
+%%
+%% This work may be distributed and/or modified under the
+%% conditions of the LaTeX Project Public License, either version 1.3c
+%% of this license or (at your option) any later version.
+%% The latest version of this license is in
+%%   http://www.latex-project.org/lppl.txt
+%% and version 1.3c or later is part of all distributions of LaTeX
+%% version 2008/05/04 or later.
+%%
+%% This work has the LPPL maintenance status `author-maintained'.
+%%
+%% This work consists of all files listed in README
+%%
 \ProvidesPackage{exbank}[2018/03/30 v0.01 Creates a setup that gives freedom in making sets and exercises.]
