--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -9,6 +9,13 @@
 \@ifundefined{ownLineNoSpacesGotIt}{
 \@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \string\usepackage{exbank}}
 }{}
+% \BDOC
+%\setExercisesDir{directory}
+% This is the directory, relative to the file you included the package,
+% where the package should be looking for exercises. Default is \!texttt{exercises}
+% \EDOC
+\gdef\setExercisesDir#1{\gdef\exercisesDir{#1}}
+
 \@ifundefined{exercisesDir}{
 \gdef\exercisesDir{exercises}
 }{}
