--- a/src/at.tex
+++ b/src/at.tex
@@ -33,9 +33,9 @@
 % \BDOC
 %\Trigger{Any Macro}
 % See \refCom{At}\\
-%Triggers available:\\
+%Available triggers:\\
 %§triggers
-%!!triggers
+% !!triggers
 % \EDOC
 \newcommand{\Trigger}[1]{
   \def\macname{\expandafter\removebs\detokenize{#1}}
