--- a/docs/exbank.tex
+++ b/docs/exbank.tex
@@ -108,9 +108,9 @@
 % \BDOC
 %\Trigger{Any Macro}
 % See \refCom{At}\\
-%Triggers available:\\
+%Available triggers:\\
 %§triggers
-%!!triggers
+% !!triggers
 % \EDOC
 \newcommand{\Trigger}[1]{
   \def\macname{\expandafter\removebs\detokenize{#1}}
