More updates to docs

--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -25,7 +25,7 @@
 \end{docCommand}
 
 \begin{dispListing}
- \makeset[nohead]\{\phead, \select{myexercise}\{1,2,3\}\}
+ \makeset[nohead]\{\phead, \select{myexercise}{1,2,3}}
 
 
 \end{dispListing}
