--- a/docs/styling.tex
+++ b/docs/styling.tex
@@ -6,7 +6,7 @@
   classoffset=1,
   % tcolorbox macros
   moretexcs={% core
-    makeset,phead,buildset,select,exclude,Trigger,At
+    makeset,phead,buildset,select,exclude,Trigger,At,translateExBank
   },
   texcsstyle=*\color{Definition}\bfseries,
   % classoffset=2,% restore default
