--- a/docs/templates/intro.tex
+++ b/docs/templates/intro.tex
@@ -3,7 +3,7 @@ So I wanted a package that allowed me to mix-and-match exercises. I couldn't fin
 \section{Flow/Moderate start}
 I suspect that working with this package will break you current flow. So let's go throught it.
 
-This package assumes you put all of your exercises within the folder named \texttt{exercises}
+This package assumes you put all of your exercises within the folder named \texttt{exercises} (you can change the default folder using \refCom{setExercisesDir})
 \begin{dispListing*}{title=exercises/myexercise.tex}
 \begin{intro}
   This introduces our problem
