--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -41,6 +41,7 @@
 %\!begin{marker}\end{problem} has to be on it's own line without any leading spaces!\!end{marker}
 % \EDOC
 \generalcomment{problem}{
+\makeatletter
   %%%% NB: Difference between \DisplaySolution and \DisplaySolutions
   \edef\DisplaySolution{\@DisplaySolutions}
   %% BeginPartproblemHard is before regardless whether
