--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -26,9 +26,9 @@
 \input{packages}
 \input{i18n}
 \input{at}
-\input{sprite}
 \input{problemstyle}
 \input{envcontrol}
 \input{isin}
+\input{squeeze}
 \input{setbuilder}
 \input{pplabel}
