--- a/docs/intro.tex
+++ b/docs/intro.tex
@@ -1,5 +1,6 @@
 \section{Motivation}
-So I wanted a package that allowed me to mix-and-match exercises. I couldn't find it, so I made it.
+Exercises are saved as separate files containing part problems. These files can be used to make sets, and you can cherry-pick or exclude certain part problems as you see fit. This makes it easier to maintain and keep your exercises flexible as the syllabus changes.
+
 \section{Flow/Moderate start}
 I suspect that working with this package will break you current flow. So let's go throught it.
 
