--- a/example.tex
+++ b/example.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{exbank}
+\usepackage{exercisebank}
 %% The \makeset{setname}{exercises,to,include} picks exercises from the exercises-folder
 %% The \exclude{setname}{1,2,3,...,9} excludes partproblems 1,...,9 from setname
 
