--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,6 +1,6 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exbank - version 0.0.2 (2018/03/30)
-%% exbank.sty: Exercise bank
+%% The LaTeX package exercisebank - version 0.0.2-1 (2018/03/31)
+%% exercisebank.sty: Exercise bank
 %%
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -18,4 +18,4 @@
 %%
 %% This work consists of all files listed in README
 %%
-\ProvidesPackage{exbank}[2018/03/30 v0.0.2 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/03/31 v0.0.2-1 Creates a setup that gives freedom in making sets and exercises.]
