--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -1,4 +1,8 @@
 %!TEX root = main.tex
+% This file contains everything to do with controlling environments
+% except from outsourcing stuff with \At and \Trigger:
+% Namely deciding whether or not a problem, intro and/or solution should
+% displayed
 
 \makeatletter
 
