--- a/src/i18n.tex
+++ b/src/i18n.tex
@@ -1,4 +1,5 @@
 %!TEX root = main.tex
+% This file contains everything to do with translation logic.
 \makeatletter
 \pgfkeys{
  /exbanki18n/.is family, /exbanki18n,
