--- a/src/main.tex
+++ b/src/main.tex
@@ -1,3 +1,4 @@
+% This file is the main file for building during development
 \documentclass{article}
 \makeatletter
 \def\insp#1{\texttt{\string#1:\meaning#1}}
