--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version 0.0.2-1 (2018/03/31)
+%% The LaTeX package exercisebank - version #VERSION (#DATE)
 %% exercisebank.sty: Exercise bank
 %%
 %% -------------------------------------------------------------------------------------------
@@ -18,4 +18,4 @@
 %%
 %% This work consists of all files listed in README
 %%
-\ProvidesPackage{exercisebank}[2018/03/31 v0.0.2-1 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[#DATE #VERSION Creates a setup that gives freedom in making sets and exercises.]
