--- a/src/pplabel.tex
+++ b/src/pplabel.tex
@@ -1,4 +1,5 @@
 %!TEX root = ../main.tex
+% This file contains definition of custom labeling and referring.
 %% Reference problems
 %\BDOC
 %§makingSets
