--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -1,4 +1,6 @@
 %!TEX root = main.tex
+% This file contains \At-commands that are responsible for formatting
+% exercise headers and exercise-related styles.
 \makeatletter
 \def\ppLeading{4em}
 \def\pMarginBelow{1em}
