--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -1,4 +1,7 @@
 %!TEX root = main.tex
+% This file contains the logic of the set making and set building.
+% It also decides whether or not a problem,intro and/or solution
+% should be built
 %\BDOC
 %§makingSets
 %\EDOC
