--- a/src/squeeze.tex
+++ b/src/squeeze.tex
@@ -1,3 +1,5 @@
+% This file contains the style for which \sprite applies
+% it "squeezes" everything so that more stuff fits on the pages
 \makeatletter
 \def\squeeze{
   % Floats
