--- a/src/texpack.tex
+++ b/src/texpack.tex
@@ -1,3 +1,4 @@
+% This is the file that is built when making all these files into packaging
 %\BDOC
 % §env=Environments
 % §lang=Internationalization
